--- a/examples/polymer/index.html
+++ b/examples/polymer/index.html
@@ -3,9 +3,10 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Polymer • TodoMVC</title>
-		<link rel="stylesheet" href="app/app.css" shim-shadowdom>
 		<script src="bower_components/webcomponentsjs/webcomponents.js"></script>
-		<link rel="import" href="bower_components/core-localstorage/core-localstorage.html">
+		<link rel="stylesheet" href="bower_components/todomvc-common/base.css">
+		<link rel="stylesheet" href="bower_components/todomvc-app-css/index.css">
+		<link rel="import" href="bower_components/iron-localstorage/iron-localstorage.html">
 		<link rel="import" href="elements/td-model.html">
 		<link rel="import" href="elements/td-todos.html">
 	</head>
